qt6/gen_qgridlayout.h

class QGridLayout;
class QLayout;
class QLayoutItem;
class QMetaObject;
class QRect;
class QSize;
class QWidget;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QGridLayout QGridLayout;
typedef struct QLayout QLayout;
typedef struct QLayoutItem QLayoutItem;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QSpacerItem QSpacerItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
bool QGridLayout_override_virtual_layout(void* self, intptr_t slot);
bool QGridLayout_override_virtual_childEvent(void* self, intptr_t slot);
void QGridLayout_virtualbase_childEvent(void* self, QChildEvent* e);
bool QGridLayout_override_virtual_event(void* self, intptr_t slot);
bool QGridLayout_virtualbase_event(void* self, QEvent* event);
bool QGridLayout_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGridLayout_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGridLayout_override_virtual_timerEvent(void* self, intptr_t slot);
void QGridLayout_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGridLayout_override_virtual_customEvent(void* self, intptr_t slot);
void QGridLayout_virtualbase_customEvent(void* self, QEvent* event);
bool QGridLayout_override_virtual_connectNotify(void* self, intptr_t slot);
void QGridLayout_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGridLayout_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGridLayout_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
bool QGridLayout_override_virtual_widget(void* self, intptr_t slot);
QWidget* QGridLayout_virtualbase_widget(const void* self);
bool QGridLayout_override_virtual_spacerItem(void* self, intptr_t slot);
QSpacerItem* QGridLayout_virtualbase_spacerItem(void* self);
void QGridLayout_delete(QGridLayout* self);