qt6/gen_qgridlayout.nim

proc fcQGridLayout_override_virtual_layout(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_layout".}
proc fQGridLayout_virtualbase_childEvent(self: pointer, e: pointer): void{.importc: "QGridLayout_virtualbase_childEvent".}
proc fcQGridLayout_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_childEvent".}
proc fQGridLayout_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QGridLayout_virtualbase_event".}
proc fcQGridLayout_override_virtual_event(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_event".}
proc fQGridLayout_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGridLayout_virtualbase_eventFilter".}
proc fcQGridLayout_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_eventFilter".}
proc fQGridLayout_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGridLayout_virtualbase_timerEvent".}
proc fcQGridLayout_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_timerEvent".}
proc fQGridLayout_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGridLayout_virtualbase_customEvent".}
proc fcQGridLayout_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_customEvent".}
proc fQGridLayout_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGridLayout_virtualbase_connectNotify".}
proc fcQGridLayout_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_connectNotify".}
proc fQGridLayout_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGridLayout_virtualbase_disconnectNotify".}
proc fcQGridLayout_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_disconnectNotify".}
proc fQGridLayout_virtualbase_widget(self: pointer, ): pointer{.importc: "QGridLayout_virtualbase_widget".}
proc fcQGridLayout_override_virtual_widget(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_widget".}
proc fQGridLayout_virtualbase_spacerItem(self: pointer, ): pointer{.importc: "QGridLayout_virtualbase_spacerItem".}
proc fcQGridLayout_override_virtual_spacerItem(self: pointer, slot: int) {.importc: "QGridLayout_override_virtual_spacerItem".}
proc fcQGridLayout_delete(self: pointer) {.importc: "QGridLayout_delete".}


func init*(T: type QGridLayout, h: ptr cQGridLayout): QGridLayout =
  T(h: h)
proc create*(T: type QGridLayout, parent: gen_qwidget.QWidget): QGridLayout =

  QGridLayout.init(fcQGridLayout_new(parent.h))
proc create*(T: type QGridLayout, ): QGridLayout =

  QGridLayout.init(fcQGridLayout_new2())
proc metaObject*(self: QGridLayout, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQGridLayout_metaObject(self.h))

proc metacast*(self: QGridLayout, param1: cstring): pointer =

  fcQGridLayout_metacast(self.h, param1)

proc metacall*(self: QGridLayout, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQGridLayout_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QGridLayout, s: cstring): string =

  let v_ms = fcQGridLayout_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc sizeHint*(self: QGridLayout, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQGridLayout_sizeHint(self.h))

proc minimumSize*(self: QGridLayout, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQGridLayout_minimumSize(self.h))

proc maximumSize*(self: QGridLayout, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQGridLayout_maximumSize(self.h))

proc setHorizontalSpacing*(self: QGridLayout, spacing: cint): void =

  fcQGridLayout_setHorizontalSpacing(self.h, spacing)

proc horizontalSpacing*(self: QGridLayout, ): cint =

  fcQGridLayout_horizontalSpacing(self.h)

proc setVerticalSpacing*(self: QGridLayout, spacing: cint): void =

  fcQGridLayout_setVerticalSpacing(self.h, spacing)

proc verticalSpacing*(self: QGridLayout, ): cint =

  fcQGridLayout_verticalSpacing(self.h)

proc setSpacing*(self: QGridLayout, spacing: cint): void =

  fcQGridLayout_setSpacing(self.h, spacing)

proc spacing*(self: QGridLayout, ): cint =

  fcQGridLayout_spacing(self.h)

proc setRowStretch*(self: QGridLayout, row: cint, stretch: cint): void =

  fcQGridLayout_setRowStretch(self.h, row, stretch)

proc setColumnStretch*(self: QGridLayout, column: cint, stretch: cint): void =

  fcQGridLayout_setColumnStretch(self.h, column, stretch)

proc rowStretch*(self: QGridLayout, row: cint): cint =

  fcQGridLayout_rowStretch(self.h, row)

proc columnStretch*(self: QGridLayout, column: cint): cint =

  fcQGridLayout_columnStretch(self.h, column)

proc setRowMinimumHeight*(self: QGridLayout, row: cint, minSize: cint): void =

  fcQGridLayout_setRowMinimumHeight(self.h, row, minSize)

proc setColumnMinimumWidth*(self: QGridLayout, column: cint, minSize: cint): void =

  fcQGridLayout_setColumnMinimumWidth(self.h, column, minSize)

proc rowMinimumHeight*(self: QGridLayout, row: cint): cint =

  fcQGridLayout_rowMinimumHeight(self.h, row)

proc columnMinimumWidth*(self: QGridLayout, column: cint): cint =

  fcQGridLayout_columnMinimumWidth(self.h, column)

proc columnCount*(self: QGridLayout, ): cint =

  fcQGridLayout_columnCount(self.h)

proc rowCount*(self: QGridLayout, ): cint =

  fcQGridLayout_rowCount(self.h)

proc cellRect*(self: QGridLayout, row: cint, column: cint): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQGridLayout_cellRect(self.h, row, column))

proc hasHeightForWidth*(self: QGridLayout, ): bool =

  fcQGridLayout_hasHeightForWidth(self.h)

proc heightForWidth*(self: QGridLayout, param1: cint): cint =

  fcQGridLayout_heightForWidth(self.h, param1)

proc minimumHeightForWidth*(self: QGridLayout, param1: cint): cint =

  fcQGridLayout_minimumHeightForWidth(self.h, param1)

proc expandingDirections*(self: QGridLayout, ): gen_qnamespace.Orientation =

  gen_qnamespace.Orientation(fcQGridLayout_expandingDirections(self.h))

proc invalidate*(self: QGridLayout, ): void =

  fcQGridLayout_invalidate(self.h)

proc addWidget*(self: QGridLayout, w: gen_qwidget.QWidget): void =

  fcQGridLayout_addWidget(self.h, w.h)

proc addWidget2*(self: QGridLayout, param1: gen_qwidget.QWidget, row: cint, column: cint): void =

  fcQGridLayout_addWidget2(self.h, param1.h, row, column)

proc addWidget3*(self: QGridLayout, param1: gen_qwidget.QWidget, row: cint, column: cint, rowSpan: cint, columnSpan: cint): void =

  fcQGridLayout_addWidget3(self.h, param1.h, row, column, rowSpan, columnSpan)

proc addLayout*(self: QGridLayout, param1: gen_qlayout.QLayout, row: cint, column: cint): void =

  fcQGridLayout_addLayout(self.h, param1.h, row, column)

proc addLayout2*(self: QGridLayout, param1: gen_qlayout.QLayout, row: cint, column: cint, rowSpan: cint, columnSpan: cint): void =

  fcQGridLayout_addLayout2(self.h, param1.h, row, column, rowSpan, columnSpan)

proc setOriginCorner*(self: QGridLayout, originCorner: gen_qnamespace.Corner): void =

  fcQGridLayout_setOriginCorner(self.h, cint(originCorner))

proc originCorner*(self: QGridLayout, ): gen_qnamespace.Corner =

  gen_qnamespace.Corner(fcQGridLayout_originCorner(self.h))

proc itemAt*(self: QGridLayout, index: cint): gen_qlayoutitem.QLayoutItem =

  gen_qlayoutitem.QLayoutItem(h: fcQGridLayout_itemAt(self.h, index))

proc itemAtPosition*(self: QGridLayout, row: cint, column: cint): gen_qlayoutitem.QLayoutItem =

  gen_qlayoutitem.QLayoutItem(h: fcQGridLayout_itemAtPosition(self.h, row, column))

proc takeAt*(self: QGridLayout, index: cint): gen_qlayoutitem.QLayoutItem =

  gen_qlayoutitem.QLayoutItem(h: fcQGridLayout_takeAt(self.h, index))

proc count*(self: QGridLayout, ): cint =

  fcQGridLayout_count(self.h)

proc setGeometry*(self: QGridLayout, geometry: gen_qrect.QRect): void =

  fcQGridLayout_setGeometry(self.h, geometry.h)

proc addItem*(self: QGridLayout, item: gen_qlayoutitem.QLayoutItem, row: cint, column: cint): void =

  fcQGridLayout_addItem(self.h, item.h, row, column)

proc setDefaultPositioning*(self: QGridLayout, n: cint, orient: gen_qnamespace.Orientation): void =

  fcQGridLayout_setDefaultPositioning(self.h, n, cint(orient))

proc getItemPosition*(self: QGridLayout, idx: cint, row: ptr cint, column: ptr cint, rowSpan: ptr cint, columnSpan: ptr cint): void =

  fcQGridLayout_getItemPosition(self.h, idx, row, column, rowSpan, columnSpan)

proc tr2*(_: type QGridLayout, s: cstring, c: cstring): string =

  let v_ms = fcQGridLayout_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QGridLayout, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQGridLayout_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc addWidget4*(self: QGridLayout, param1: gen_qwidget.QWidget, row: cint, column: cint, param4: gen_qnamespace.AlignmentFlag): void =

  fcQGridLayout_addWidget4(self.h, param1.h, row, column, cint(param4))

proc addWidget6*(self: QGridLayout, param1: gen_qwidget.QWidget, row: cint, column: cint, rowSpan: cint, columnSpan: cint, param6: gen_qnamespace.AlignmentFlag): void =

  fcQGridLayout_addWidget6(self.h, param1.h, row, column, rowSpan, columnSpan, cint(param6))

proc addLayout4*(self: QGridLayout, param1: gen_qlayout.QLayout, row: cint, column: cint, param4: gen_qnamespace.AlignmentFlag): void =

  fcQGridLayout_addLayout4(self.h, param1.h, row, column, cint(param4))

proc addLayout6*(self: QGridLayout, param1: gen_qlayout.QLayout, row: cint, column: cint, rowSpan: cint, columnSpan: cint, param6: gen_qnamespace.AlignmentFlag): void =

  fcQGridLayout_addLayout6(self.h, param1.h, row, column, rowSpan, columnSpan, cint(param6))

proc addItem4*(self: QGridLayout, item: gen_qlayoutitem.QLayoutItem, row: cint, column: cint, rowSpan: cint): void =

  fcQGridLayout_addItem4(self.h, item.h, row, column, rowSpan)

proc addItem5*(self: QGridLayout, item: gen_qlayoutitem.QLayoutItem, row: cint, column: cint, rowSpan: cint, columnSpan: cint): void =

  fcQGridLayout_addItem5(self.h, item.h, row, column, rowSpan, columnSpan)

proc addItem6*(self: QGridLayout, item: gen_qlayoutitem.QLayoutItem, row: cint, column: cint, rowSpan: cint, columnSpan: cint, param6: gen_qnamespace.AlignmentFlag): void =

  fcQGridLayout_addItem6(self.h, item.h, row, column, rowSpan, columnSpan, cint(param6))

proc callVirtualBase_metacall(self: QGridLayout, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQGridLayout_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QGridLayoutmetacallBase* = proc(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
proc onmetacall*(self: QGridLayout, slot: proc(super: QGridLayoutmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint) =
  # TODO check subclass
  type Cb = proc(super: QGridLayoutmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQGridLayout_override_virtual_metacall(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGridLayout_metacall(self: ptr cQGridLayout, slot: int, param1: cint, param2: cint, param3: pointer): cint {.exportc: "miqt_exec_callback_QGridLayout_metacall ".} =
  type Cb = proc(super: QGridLayoutmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): auto =
    callVirtualBase_metacall(QGridLayout(h: self), param1, param2, param3)
  let slotval1 = gen_qobjectdefs.QMetaObjectCall(param1)

  let slotval2 = param2
